welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (speed<=60) {
		return 0
	}
	else if (speed>60 && speed<=80 && isBirthday==false) {
		return 1
	}
	else if (speed>80 && isBirthday==false) {
		return 2
	}
	else if (speed<=65 && isBirthday==true) {
		return 0
	}
	else if (speed>65 && speed<=85 && isBirthday==true) {
		return 1
	}
	if (speed>85) {
		return 2
	}
}
